--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -3,9 +3,9 @@ on: [push]
 jobs:
   build:
     runs-on: docker
+        container:
+          image: rust:1-alpine
     steps:
-    - name: Set up Rust
-      uses: msrd0/rust-toolchain@nightly
     - name: Check out code
       uses: actions/checkout@v4
     - name: Build binary
