--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: docker
     container:
-      image: rust:1-alpine
+      image: rust:latest
     steps:
     - name: Check out code
       uses: actions/checkout@v4
