--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Build binary
       run: cargo build --release
     - name: Change directory to build directory
-      run: cd /workspace/musselman/version_name_generator/target/release
+      run: cd /workspace/musselman/version_name_generator/target/release && ls
     - name: Publish binary
       uses: earl-warren/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
