Update rust workflow

--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -16,4 +16,5 @@ jobs:
       uses: earl-warren/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: *version_name_generator*
+        files: | 
+          version_name_generator
