--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -6,22 +6,26 @@ jobs:
     steps:
     - name: Set up Rust
       uses: msrd0/rust-toolchain@nightly
+      run: wget https://git.privacyquest.net/musselman/action_config_files/raw/branch/main/config.toml
     - name: Check out code
       uses: actions/checkout@v4
     - name: Build binary
       run: cargo build --release
-    - uses: actions/upload-artifact@v3
-      with:
-        name: version_name_generator
-        path: ./target/release/version_name_generator
-    - uses: actions/download-artifact@v3
-      with:
-        name: version_name_generator
-    - name: Publish binary
-      uses: earl-warren/action-gh-release@v1
+    - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
-      with:
-        fail_on_unmatched_files: true
-        files: | 
-          version_name_generator
+      run: cargo publish
+        #- uses: actions/upload-artifact@v3
+        #with:
+        #name: version_name_generator
+        #path: ./target/release/version_name_generator
+          #- uses: actions/download-artifact@v3
+          #with:
+          #name: version_name_generator
+          #    - name: Publish binary
+          #uses: earl-warren/action-gh-release@v1
+          #if: startsWith(github.ref, 'refs/tags/')
+          #with:
+          #fail_on_unmatched_files: true
+          #files: | 
+          #version_name_generator
 
