--- a/.forgejo/workflows/build-and-release.yml
+++ b/.forgejo/workflows/build-and-release.yml
@@ -6,14 +6,15 @@ jobs:
     steps:
     - name: Set up Rust
       uses: msrd0/rust-toolchain@nightly
-      run: wget https://git.privacyquest.net/musselman/action_config_files/raw/branch/main/config.toml
     - name: Check out code
       uses: actions/checkout@v4
     - name: Build binary
       run: cargo build --release
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
-      run: cargo publish
+      run: |
+        wget https://git.privacyquest.net/musselman/action_config_files/raw/branch/main/config.toml
+        cargo publish
         #- uses: actions/upload-artifact@v3
         #with:
         #name: version_name_generator
